# ComfyUI-UltraShape1

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
UltraShape-1.0/: Notice.txt  README.md  main.py  requirements.txt  train.sh
UltraShape-1.0/configs/: infer_dit_refine.yaml  train_dit_refine.yaml  train_vae_refine.yaml
UltraShape-1.0/docs/: carousel.css  carousel.js  index copy.html  index.html  main.css  pv.css  style.css  stylesheet.css  window.css
UltraShape-1.0/scripts/: infer_dit_refine.py  install_env.sh  run.sh  sampling.py  train_deepspeed.sh
UltraShape-1.0/ultrashape/: __init__.py  pipelines.py  postprocessors.py  rembg.py  schedulers.py  surface_loaders.py
UltraShape-1.0/ultrashape/data/: objaverse_dit.py  objaverse_vae.py  utils.py
UltraShape-1.0/ultrashape/models/: __init__.py  conditioner_mask.py
UltraShape-1.0/ultrashape/models/autoencoders/: __init__.py  attention_blocks.py  attention_processors.py  model.py  surface_extractors.py  vae_trainer.py  volume_decoders.py
UltraShape-1.0/ultrashape/models/denoisers/: __init__.py  dit_mask.py
UltraShape-1.0/ultrashape/models/diffusion/: flow_matching_dit_trainer.py
UltraShape-1.0/ultrashape/utils/: __init__.py  misc.py  utils.py  voxelize.py
UltraShape-1.0/ultrashape/utils/trainings/: mesh_log_callback.py  peft.py
workflow/: workflow-low-vram.json
